--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +14,8 @@
     <p>Bem vindo!</p>
     <br><br>
     <h4>Opções:</h4>
-    <button href="/springsec/recipes/all">Ingrediente</button>
-    <button href="/springsec/ingredients/all">Receitas</button>
-    <button href="/springsec/expense/view">Custo Fixo</button>
+    <a href="/precofacil/recipe/all">Receitas</a>
+    <a href="/precofacil/ingredient/all">Ingrediente</a>
+    <a href="/precofacil/expense/view">Custo Fixo</a>
 </body>
 </html>
