--- a/src/main/resources/templates/precoFacil.html
+++ b/src/main/resources/templates/precoFacil.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
-<html lang="pt-BR">
+<html xmlns:th="https://www.thymeleaf.org" lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +9,6 @@
 <body>
     <h1>Preço Fácil</h1>
     <p>Faça a precificação das suas receitasde uma forma simples e rápida!</p>
-    <button href="/springseg/home">Começar</button>
+    <a href="/precofacil/home">Começar</a>
 </body>
 </html>
